<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/dp_5"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_18"
            android:gravity="center_vertical"
            android:text="@string/rewards"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_24" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:src="@drawable/logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_20"
            android:src="@drawable/name_image" />
    </LinearLayout>

    <EditText
        android:id="@+id/studentIDET"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/gray_bg"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:paddingLeft="@dimen/dp_5"
        android:hint="Student ID"
        android:inputType="text"
        android:text="@string/stident_id"
        android:maxLength="50"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/dp_16" />


    <EditText
        android:id="@+id/usernameET"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/gray_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_5"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLength="50"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/dp_16" />


    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:background="@color/gray_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_5"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="100"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/dp_16" />

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@color/button_bg"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/dp_18" />

    <CheckBox
        android:id="@+id/rememberMyCredentialsCB"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginRight="@dimen/dp_60"
        android:buttonTint="@color/hint_color"
        android:text="@string/remember_my_credentials"
        android:textColor="@color/hint_color" />

    <TextView
        android:id="@+id/registrationTV"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/tap_here_to_create_an_account"
        android:textColor="@color/text_color"
        android:textSize="@dimen/dp_18" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
